# enterprise-knowledge-assistant

./: .dockerignore  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh  uv.lock.backup
.github/workflows/: deploy.yml
backend/: main.py
backend/agents/: graph.py  nodes.py  router.py  state.py  tools.py  web_search.py
backend/agents/providers/: base.py  exa.py
backend/api/: chat.py  documents.py  ingest.py  search.py
backend/config/: settings.py
backend/core/: logging.py
backend/embeddings/: __init__.py  dense_embedder.py  hybride_embedder.py  sparse_embedder.py
backend/ingestion/: chunker.py  metadata.py  parser.py  pipeline.py  table_parser.py
backend/llm/: evaluation.py  evaluator.py  generator.py  model.py  prompts.py  rag_chain.py
backend/retrieval/: dense.py  hybrid.py  reranker.py  retriever.py
backend/schemas/: __init__.py  chat.py  documents.py  ingest.py  search.py
backend/services/: citation_service.py  document_service.py
backend/vectorstore/: qdrant.py
frontend/: app.py  settings.py
frontend/assests/: style.css
frontend/components/: chat_message.py  sidebar.py
frontend/pages/: chat.py  upload.py
frontend/services/: api.py  state.py
