[project]
name = "enterprise-knowledge-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.104.0",
    "exa-py>=2.15.0",
    "fastapi[standard]>=0.138.0",
    "fastembed>=0.8.0",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langchain-mistralai>=1.1.5",
    "langchain-openai>=1.3.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.5.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.58.0",

    "torch",
    "torchvision",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
